--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nan Wang | Bioinformatics & Immunology</title>
     <link rel="icon" type="image/png" href="image/favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Serif+SC:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Serif+SC:wght@300&family=Aboreto&display=swap" rel="stylesheet">
     <style>
         @font-face {
             font-family: 'BodoniFLF-Italic';
@@ -20,11 +20,9 @@
         }
         @font-face {
             font-family: 'Aboreto-Regular';
-            src: url('font/Aboreto-Regular.woff2') format('woff2'),
-                 url('font/Aboreto-Regular.woff') format('woff'),
-                 url('font/Aboreto-Regular.ttf') format('truetype'),
-                 local('Aboreto-Regular'),
-                 local('Aboreto Regular');
+            src: url('font/Aboreto-Regular.woff') format('woff'),
+                 url('font/Aboreto-Regular.woff2') format('woff2'),
+                 url('font/Aboreto-Regular.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
