Add web fonts and update HTML/CSS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             font-display: swap;
         }
         @font-face {
-            font-family: 'Aboreto-Regular';
+            font-family: 'Aboreto';
             src: url('font/Aboreto-Regular.woff') format('woff'),
                  url('font/Aboreto-Regular.woff2') format('woff2'),
                  url('font/Aboreto-Regular.ttf') format('truetype');
@@ -71,7 +71,7 @@
             --glass-border: rgba(255, 255, 255, 0.5);
             --shadow-light: 0 10px 30px rgba(0, 0, 0, 0.2);
             --shadow-float: 0 15px 40px rgba(0, 0, 0, 0.25); 
-            --serif-font: 'MingLiU_HKSCS-ExtB', 'Noto Serif SC', serif;
+            --serif-font: 'Aboreto', 'Georgia', 'Times New Roman', 'MingLiU_HKSCS-ExtB', 'Noto Serif SC', serif;
             --sans-font: 'Inter', sans-serif; 
         }
         html {
@@ -207,7 +207,7 @@
         #extracurricular .section-title,
         #skills .section-title,
         #thesis .section-title {
-            font-family: 'Aboreto-Regular', var(--serif-font) !important;
+            font-family: 'Aboreto', var(--serif-font) !important;
         }
         /* 子标题保持原有字体 */
         .details h3,
@@ -384,7 +384,7 @@
         .nav-links li a {
             color: var(--text-secondary);
             text-decoration: none;
-            font-family: 'Aboreto-Regular', var(--serif-font) !important; 
+            font-family: 'Aboreto', var(--serif-font) !important; 
             font-weight: normal;
             font-size: 0.95em;
             letter-spacing: 0.5px;
@@ -424,7 +424,7 @@
         }
         /* 导航栏中所有链接的 span 也使用相同字体 */
         .nav-links li a span {
-            font-family: 'Aboreto-Regular', var(--serif-font) !important;
+            font-family: 'Aboreto', var(--serif-font) !important;
         }
         #container {
             max-width: var(--max-content-width);
@@ -588,7 +588,7 @@
             background-color: var(--glass-bg-content) !important;
         }
         .section-title {
-            font-family: 'Aboreto-Regular', var(--serif-font) !important;
+            font-family: 'Aboreto', var(--serif-font) !important;
             font-size: 2em;
             font-weight: 400;
             color: var(--primary-color); 
@@ -600,7 +600,7 @@
         /* About Me 标题使用 Aboreto-Regular 字体，与 Practical Experience 一致 */
         #about .section-title,
         #about h2.section-title {
-            font-family: 'Aboreto-Regular', var(--serif-font) !important;
+            font-family: 'Aboreto', var(--serif-font) !important;
             font-size: 2em !important;
             font-weight: 400 !important;
             color: var(--primary-color) !important;
@@ -615,7 +615,7 @@
         }
         /* 确保 About Me 标题内的文本也使用相同字体（排除图标） */
         #about .section-title span {
-            font-family: 'Aboreto-Regular', var(--serif-font) !important;
+            font-family: 'Aboreto', var(--serif-font) !important;
         }
         /* 确保图标不影响字体 */
         #about .section-title i {
@@ -1992,7 +1992,7 @@
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
         }
         .mobile-warning-content h1 {
-            font-family: 'Aboreto-Regular', var(--serif-font);
+            font-family: 'Aboreto', var(--serif-font);
             font-size: 1.5em;
             color: #000000;
             margin-bottom: 20px;
