Add web fonts and update HTML/CSS

--- a/index.html
+++ b/index.html
@@ -2312,7 +2312,7 @@
                             <div class="pub-content">
                                 <h3 class="pub-title">Ccl2-Induced Regulatory T Cells Balance Inflammation Through Macrophage Polarization During Liver Reconstitution</h3>
                                 <p class="pub-authors">Wang R, Liang Q, Zhang Q, Zhao S, Lin Y, Liu B, Ma Y, Mai X, Fu Q, Bao X, Wang N, Chen B, Yan P, Zhu Y, Wang K.</p>
-                                <p class="pub-journal"><i>Adv Sci(Weinh).</i> 2024 Dec, 11(45):e2403849. (Published)</p>
+                                <p class="pub-journal"><i>Adv Sci(Weinh).</i> 2024 Dec, 11(45):e2403849. doi: 10.1002/advs.202403849. (Published)</p>
                                 <span class="pub-impact">IF: 15.6</span>
                             </div>
                         </div>
@@ -2395,7 +2395,7 @@
                                 </ul>
                             </p>
                             <div class="thesis-image-container">
-                                <img src="image/1.2.png" alt="Tumor neoantigen presentation pathway" class="thesis-image thesis-image-small">
+                                <img src="image/1.2.jpg" alt="Tumor neoantigen presentation pathway" class="thesis-image thesis-image-small">
                             </div>
                             <h4>1.3 TCR Research in the Context of COVID-19</h4>
                             <p>In the context of the <strong>global COVID-19 pandemic</strong>, research on <strong>SARS-CoV-2</strong>-associated <strong>virus-specific TCRs</strong> and <strong>diverse immune repertoires</strong> is crucial. Key findings:
@@ -2406,7 +2406,7 @@
                                 </ul>
                             </p>
                             <div class="thesis-image-container">
-                                <img src="image/1.3.png" alt="SARS-CoV-2 T cell response" class="thesis-image thesis-image-small">
+                                <img src="image/1.3.jpg" alt="SARS-CoV-2 T cell response" class="thesis-image thesis-image-small">
                             </div>
                         </div>
                     </div>
@@ -2424,11 +2424,11 @@
                         </div>
                     </div>
                     <div class="thesis-image-container">
-                        <img src="image/1.4.png" alt="Research contents" class="thesis-image thesis-image-xxlarge">
+                        <img src="image/1.4.jpg" alt="Research contents" class="thesis-image thesis-image-xxlarge">
                         <span class="image-caption">Research contents</span>
                     </div>
                     <div class="thesis-image-container">
-                        <img src="image/1.5.png" alt="Research contents" class="thesis-image thesis-image-large">
+                        <img src="image/1.5.jpg" alt="Research contents" class="thesis-image thesis-image-large">
                         <span class="image-caption">Research contents</span>
                     </div>
                     <div class="content-item">
@@ -2442,14 +2442,14 @@
                             <h4>2.2 Bioinformatics Analysis Pipeline</h4>
                             <p><strong>Immune repertoire analysis pipeline:</strong> Raw input → Alignment → Clone integration → <strong>VDJmatch</strong> → <strong>GLIPH</strong> → R language → Machine learning classifier.</p>
                             <div class="thesis-image-container">
-                                <img src="image/2.1.png" alt="Immune repertoire analysis flowchart" class="thesis-image thesis-image-large">
+                                <img src="image/2.1.jpg" alt="Immune repertoire analysis flowchart" class="thesis-image thesis-image-large">
                                 <span class="image-caption">Bioinformatics workflow for immune repertoire analysis</span>
                             </div>
                             <div class="tech-description">
                                 <strong>Technical description:</strong> The immune repertoire bioinformatics analysis pipeline is as follows: Patient sequences are aligned to the TCR reference genome in the International ImMunoGeneTics information system (IMGT) database. After identifying V, D, and J gene segment sequences, they are assembled into CDR3 amino acid sequences. VDJmatch can then be used to annotate TCRs with known antigen-specific epitopes. GLIPH can cluster TCRs with similar antigen specificities. R language is used for comprehensive analysis of the immune repertoire, and finally, machine learning classifiers are used for prediction.
                             </div>
                             <div class="thesis-image-container">
-                                <img src="image/2.2.png" alt="Classifier construction method" class="thesis-image thesis-image-large">
+                                <img src="image/2.2.jpg" alt="Classifier construction method" class="thesis-image thesis-image-large">
                                 <span class="image-caption">Classifier construction method</span>
                             </div>
                             <div class="tech-description">
@@ -2481,7 +2481,7 @@
                                 <li><strong>Diversity indices:</strong> Clonal diversity indices (e.g., D50, Gini-Simpson, chao1) can reflect T cell expansion and rearrangement under disease conditions.</li>
                             </ul>
                             <div class="thesis-image-container">
-                                <img src="image/3.1.png" alt="Comparison of TCRβ CDR3 between COVID-19 patients at different stages and healthy individuals" class="thesis-image thesis-image-large">
+                                <img src="image/3.1.jpg" alt="Comparison of TCRβ CDR3 between COVID-19 patients at different stages and healthy individuals" class="thesis-image thesis-image-large">
                                 <span class="image-caption">Comparison of TCRβ CDR3 between COVID-19 patients at different stages and healthy individuals. (A) Total <strong>CDR3 clonotype diversity</strong>; (B) Total <strong>CDR3 clone abundance</strong>; (C) Clonal diversity D50 index; (D) Clonal diversity Gini-Simpson index; (E) Clonal diversity chao1 index</span>
                             </div>
                             <p>Principal component analysis (PCA) and t-SNE were used to perform dimensionality reduction and clustering of TCR repertoires across groups, visualizing repertoire differences under different conditions:</p>
@@ -2521,7 +2521,7 @@
                                 <li><strong>Gene differences:</strong> Volcano plots highlighted <strong>V/J genes</strong> with significant differences between acute phase, transition phase, recovery phase and healthy individuals, as well as between different disease stages.</li>
                             </ul>
                             <div class="thesis-image-container">
-                                <img src="image/3.7.png" alt="V/J gene usage preferences" class="thesis-image thesis-image-xlarge">
+                                <img src="image/3.7.jpg" alt="V/J gene usage preferences" class="thesis-image thesis-image-xlarge">
                                 <span class="image-caption">V/J gene usage preferences. (A) Gene usage of <strong>TCRβV region</strong> across four groups (top 15); (B) Bar chart showing <strong>TCRβV region</strong> gene usage for each sample; (D) Heatmap showing <strong>TCRβJ region</strong> gene usage across four groups; (C) Heatmap showing <strong>TCRβV region</strong> gene usage; (E) Sankey diagram showing interactions between TCRβ in acute phase patients; (F) Chord diagram showing interactions between TCRβ in acute phase patients; (G) Pie chart showing <strong>TCRβV region</strong> gene usage percentages.</span>
                             </div>
                             <div class="thesis-image-container">
@@ -2548,14 +2548,14 @@
                                 <span class="image-caption">Table 3-1: VDJmatch results table (acute phase): Shows matching of acute phase patient TCR sequences with antigen epitopes in the VDJdb database, including number of matched sequences, frequency, and read counts</span>
                             </div>
                             <div class="thesis-image-container">
-                                <img src="image/3.12.png" alt="Visualization of GLIPH results using Levenshtein distance" class="thesis-image thesis-image-small">
+                                <img src="image/3.12.jpg" alt="Visualization of GLIPH results using Levenshtein distance" class="thesis-image thesis-image-small">
                                 <span class="image-caption">Visualization of GLIPH results using Levenshtein distance. (A) Acute phase patients; (B) Recovery phase patients</span>
                             </div>
                             <div class="tech-description">
                                 <strong>GLIPH clustering analysis:</strong> GLIPH can cluster sequences with similar antigen specificities, which are then represented on a two-dimensional plane using Levenshtein distance. It can be observed that acute phase patients have more similar TCR characteristics compared to recovery phase patients.
                             </div>
                             <div class="thesis-image-container">
-                                <img src="image/3.13.png" alt="Sequence Logo plot (acute phase patients vs. healthy individuals)" class="thesis-image thesis-image-small">
+                                <img src="image/3.13.jpg" alt="Sequence Logo plot (acute phase patients vs. healthy individuals)" class="thesis-image thesis-image-small">
                                 <span class="image-caption">Sequence Logo plot (acute phase patients vs. healthy individuals)</span>
                             </div>
                             <div class="tech-description">
@@ -2572,7 +2572,7 @@
                                 <span class="image-caption">Scatter plots and ROC curves of classifiers between groups. (A) Acute phase vs. transition phase; (B) Acute phase vs. recovery phase; (C) Acute phase vs. healthy group.</span>
                             </div>
                             <div class="thesis-image-container">
-                                <img src="image/3.15.png" alt="Machine learning classifier ROC curves" class="thesis-image thesis-image-large">
+                                <img src="image/3.15.jpg" alt="Machine learning classifier ROC curves" class="thesis-image thesis-image-large">
                                 <span class="image-caption"><strong>ROC curves</strong> of classifiers between groups. (A) Acute phase vs. healthy group; (B) Transition phase vs. healthy group; (C) Recovery phase vs. healthy group; (D) Acute phase vs. transition phase; (E) Transition phase vs. recovery phase; (F) Acute phase vs. recovery phase.</span>
                             </div>
                             <div class="tech-description">
@@ -2599,7 +2599,7 @@
                                 <li><strong>Peptide contribution:</strong> <strong>SHAP values</strong> were used to explain the contribution of different TCR peptides to classifier decisions, aiding in the identification of key SARS-CoV-2-specific TCR sequences.</li>
                             </ul>
                             <div class="thesis-image-container">
-                                <img src="image/3.19.png" alt="Contribution of different peptides to classifier described by SHAP values" class="thesis-image thesis-image-small">
+                                <img src="image/3.19.jpg" alt="Contribution of different peptides to classifier described by SHAP values" class="thesis-image thesis-image-small">
                                 <span class="image-caption">Contribution of different peptides to classifier described by <strong>SHAP values</strong></span>
                             </div>
                             <div class="thesis-image-container">
