--- a/personal_statement.html
+++ b/personal_statement.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Statement | Nan Wang</title>
     <link rel="icon" type="image/jpeg" href="image/favicon.jpg">
-    <link rel="preload" href="wall.jpg" as="image">
-    <link rel="preload" href="image/foot3.jpg" as="image">
+    <link rel="preload" href="wall.jpg" as="image" fetchpriority="high">
+    <link rel="preload" href="image/foot3.jpg" as="image" fetchpriority="high">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Serif+SC:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
@@ -70,10 +70,7 @@
             font-weight: 300; 
             margin: 0;
             padding: 0;
-            background-image: url('wall.jpg');
-            background-repeat: no-repeat;
-            background-size: cover; 
-            background-attachment: fixed; 
+            background-color: #f5f5f5;
             color: var(--text-primary);
             line-height: 1.8;
             font-size: 16px;
@@ -82,6 +79,30 @@
             max-width: 100vw;
             position: relative;
             min-height: 100vh;
+        }
+
+        /* 针对 Safari 优化的固定背景 */
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('wall.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            -webkit-background-size: cover;
+            background-position: center center;
+            z-index: -1;
+            will-change: transform;
+        }
+
+        /* 硬件加速优化 */
+        .statement-image, .footer-image, .back-button {
+            will-change: transform;
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
         }
         #container {
             max-width: var(--max-content-width);
