--- a/personal_statement.html
+++ b/personal_statement.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Statement | Nan Wang</title>
     <link rel="icon" type="image/jpeg" href="image/favicon.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="preload" href="wall.jpg" as="image" fetchpriority="high">
     <link rel="preload" href="image/foot3.jpg" as="image" fetchpriority="high">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Serif+SC:wght@300&display=swap" rel="stylesheet">
@@ -12,8 +15,8 @@
     <style>
         @font-face {
             font-family: 'lvyPresto Display';
-            src: url('fonts/lvyPrestoDisplay.woff2') format('woff2'),
-                 url('fonts/lvyPrestoDisplay.woff') format('woff'),
+            src: url('fonts/lvyPrestoDisplay.woff') format('woff'),
+                 url('fonts/lvyPrestoDisplay.woff2') format('woff2'),
                  url('fonts/lvyPrestoDisplay.ttf') format('truetype'),
                  local('lvyPresto Display'),
                  local('lvyPrestoDisplay');
@@ -23,8 +26,8 @@
         }
         @font-face {
             font-family: 'Aboreto-Regular';
-            src: url('font/Aboreto-Regular.woff2') format('woff2'),
-                 url('font/Aboreto-Regular.woff') format('woff'),
+            src: url('font/Aboreto-Regular.woff') format('woff'),
+                 url('font/Aboreto-Regular.woff2') format('woff2'),
                  url('font/Aboreto-Regular.ttf') format('truetype'),
                  local('Aboreto-Regular'),
                  local('Aboreto Regular');
@@ -34,9 +37,11 @@
         }
         @font-face {
             font-family: 'MingLiU_HKSCS-ExtB';
-            src: url('font/mingliub.ttc') format('collection'),
-                 url('font/mingliub.ttc') format('truetype'),
-                 local('MingLiU_HKSCS-ExtB');
+            src: local('MingLiU_HKSCS-ExtB'),
+                 local('MingLiU'),
+                 local('PMingLiU'),
+                 url('font/mingliub.woff') format('woff'),
+                 url('font/mingliub.ttc') format('collection');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
@@ -56,7 +61,8 @@
             --glass-bg-content: rgba(255, 255, 255, 0.6); 
             --glass-border: rgba(255, 255, 255, 0.5);
             --shadow-light: 0 10px 30px rgba(0, 0, 0, 0.2);
-            --serif-font: 'MingLiU_HKSCS-ExtB', 'Songti SC', 'STSong', 'Noto Serif SC', serif;
+            /* 默认衬线字体设置：Windows 优先使用 MingLiU，Mac 优先使用 Georgia */
+            --serif-font: 'MingLiU_HKSCS-ExtB', 'Georgia', 'Songti SC', 'STSong', 'Noto Serif SC', serif;
             --sans-font: 'Inter', sans-serif; 
         }
         html {
