Add web picture and update HTML/CSS

--- a/personal_statement.html
+++ b/personal_statement.html
@@ -295,7 +295,7 @@
 </head>
 <body>
     <div id="container">
-        <a href="index.html" class="back-button" style="font-family: 'Times New Roman', Times, serif !important; font-style: italic !important;">
+        <a href="./index.html" class="back-button" style="font-family: 'Times New Roman', Times, serif !important; font-style: italic !important;">
             Back to Home
         </a>
         
