Add update HTML/CSS

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             box-shadow: 0 25px 60px rgba(0, 0, 0, 0.4); 
         }
         #intro h1 {
-            font-family: 'BodoniFLF-Italic', 'Bodoni MT', 'Bodoni', serif;
+            font-family: 'BodoniFLF-Italic', 'Bodoni 72', 'Bodoni 72 Oldstyle', 'Bodoni MT', 'Bodoni', serif;
             font-size: 3.2em;
             margin: 0 0 8px;
             font-weight: 400; 
