--- a/index.html
+++ b/index.html
@@ -1907,8 +1907,7 @@
         }
         .footer-image {
             display: block !important;
-            width: 65% !important; /* Safari 兼容写法，先设一个固定宽度 */
-            width: clamp(50%, 65%, 100%) !important;
+            width: 63% !important; /* 在之前基础上增加 5% */
             height: auto !important;
             max-width: 100% !important;
             margin: 0 auto !important;
@@ -1934,33 +1933,33 @@
         /* 响应式调整：当页面宽度变化时，图片自适应（包括缩小和放大） */
         @media (max-width: 1200px) {
             .footer-image {
-                width: clamp(60%, 70%, 100%);
+                width: 75% !important; /* 增加 5% */
             }
         }
         @media (max-width: 900px) {
             .footer-image {
-                width: clamp(70%, 80%, 100%);
+                width: 85% !important; /* 增加 5% */
             }
         }
         @media (max-width: 600px) {
             .footer-image {
-                width: clamp(80%, 90%, 100%);
+                width: 95% !important; /* 增加 5% */
             }
         }
         @media (max-width: 400px) {
             .footer-image {
-                width: clamp(85%, 95%, 100%);
+                width: 100% !important; /* 增加 5% */
             }
         }
         /* 当页面放大时也自适应 */
         @media (min-width: 1400px) {
             .footer-image {
-                width: clamp(50%, 60%, 65%);
+                width: 59% !important; /* 增加 5% */
             }
         }
         @media (min-width: 1600px) {
             .footer-image {
-                width: clamp(45%, 55%, 60%);
+                width: 60% !important; /* 增加 5% */
             }
         }
         /* 确保页尾容器也能响应窗口变化 */
