Add update HTML/CSS

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="preload" href="wall.jpg" as="image" fetchpriority="high">
-    <link rel="preload" href="me.jpg" as="image" fetchpriority="high">
-    <link rel="preload" href="image/foot3.jpg" as="image" fetchpriority="high">
+    <link rel="preload" href="wall.webp" as="image" fetchpriority="high">
+    <link rel="preload" href="me.webp" as="image" fetchpriority="high">
+    <link rel="preload" href="image/foot3.webp" as="image" fetchpriority="high">
     <!-- 移除非必要的预加载以释放带宽 -->
     <style>
         :root {
@@ -119,7 +119,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('wall.jpg');
+            background-image: url('wall.webp');
             background-repeat: no-repeat;
             background-size: cover;
             -webkit-background-size: cover;
@@ -136,7 +136,7 @@
             width: 100%;
             height: 100vh;
             min-height: 100vh;
-            background-image: url('wall.jpg');
+            background-image: url('wall.webp');
             background-repeat: no-repeat;
             background-size: cover;
             -webkit-background-size: cover;
@@ -2044,7 +2044,7 @@
     </header>
     <div id="container">
         <section id="intro" class="reveal">
-            <img src="me.jpg" alt="Nan Wang Profile Photo" class="profile-photo" fetchpriority="high" decoding="sync">
+            <img src="me.webp" alt="Nan Wang Profile Photo" class="profile-photo" fetchpriority="high" decoding="sync">
             <h1>Nan Wang</h1>
             <p>Bioinformatics Analyst & Immunologist</p>
             <div class="contact-info">
@@ -2949,7 +2949,7 @@
                 <i class="fab fa-weibo"></i>
             </a>
         </div>
-        <img src="image/foot3.jpg" alt="Footer" class="footer-image" fetchpriority="high" decoding="sync">
+        <img src="image/foot3.webp" alt="Footer" class="footer-image" fetchpriority="high" decoding="sync">
         <div class="footer-links">
             <a href="#" class="footer-link">Privacy Policy</a>
             <span class="footer-link-separator">|</span>
