--- a/personal_statement.html
+++ b/personal_statement.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-    <link rel="preload" href="wall.jpg" as="image" fetchpriority="high">
-    <link rel="preload" href="image/foot3.jpg" as="image" fetchpriority="high">
+    <link rel="preload" href="wall.webp" as="image" fetchpriority="high">
+    <link rel="preload" href="image/foot3.webp" as="image" fetchpriority="high">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Serif+SC:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
@@ -95,7 +95,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('wall.jpg');
+            background-image: url('wall.webp');
             background-repeat: no-repeat;
             background-size: cover;
             -webkit-background-size: cover;
