--- a/index.html
+++ b/index.html
@@ -2310,7 +2310,7 @@
                             <div class="pub-content">
                                 <h3 class="pub-title">Ccl2-Induced Regulatory T Cells Balance Inflammation Through Macrophage Polarization During Liver Reconstitution</h3>
                                 <p class="pub-authors">Wang R, Liang Q, Zhang Q, Zhao S, Lin Y, Liu B, Ma Y, Mai X, Fu Q, Bao X, Wang N, Chen B, Yan P, Zhu Y, Wang K.</p>
-                                <p class="pub-journal"><i>Adv Sci(Weinh).</i> 2024 Dec, 11(45):e2403849. doi: 10.1002/advs.202403849. (Published)</p>
+                                <p class="pub-journal"><i>Adv Sci(Weinh).</i> 2024 Dec, 11(45):e2403849. (Published)</p>
                                 <span class="pub-impact">IF: 15.6</span>
                             </div>
                         </div>
